0.2.35

dump_os - add  support for Amazon Linux

0.2.34 2017-04-18

Get rid of warning "Behavior was already defined"

0.2.33 2017-04-18

populate_config : Additional fix for bug crept under 0.2.32 release

0.2.32 2017-04-17

* Bugfix: merge duplicated config hash keys for some cases 

0.2.31 2017-04-11

* Internal feature - strun now accepts --args-file /path/to/file to pass command line parameters via file ( mostly used in Sparrowdo --task_run )

0.2.30 2017-04-10

* strun - improve reports
* strun - slient option is depricated
* strun - new option - format, format=concise 
 
0.2.29 2017-03-29

* execute_cmd2 -  use Capture::Tiny::tee to support realtime STDOUT/STDERR.
    
0.2.28 2017-03-18

* #2 - _resolve_os() - recognize archlinux and fedora 

0.2.27 2017-03-02

* Strun - fix for cases when exit_code = 1 

0.2.26 2017-03-02

* Use Capture::Tiny to fix bug with hanging forked process - https://github.com/melezhik/sparrow/issues/11
* Strun - Calculate statuses to confirm consul requirements: 0,1,2

0.2.25 2017-02-17

* Python supported !!!
* reports - changed markers for stories
* add timestamps to reports
* story_vars_pretty - print story parameters in sorted order

0.2.24 2017-01-11

* strun reports changed story footprints to improve readability

0.2.23 2017-01-09

* print task name for meta stories
* remove extra lines from meta stories reports
* change reports layout ( hope for good )

0.2.22 2017-01-09

* ./dsl-test - contains tests for Outthentic::DSL
* restore ./inc in Git scm to allow `cpanm` install via git url
* task_name parameter ( to print task names when stories get runs from tasks  )

0.2.21 2016-12-22

* Requires the latest version of Outthentic::DSL
* Added some examples ( well tests )

0.2.20 2016-12-22

* Pass a string not filepath to the Outthentic::DSL validate method ( passing as filepath is still available for back compatibility )
* Requires the latest version of Outthentic::DSL